--- a/index.html
+++ b/index.html
@@ -4,30 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://rsms.me/inter/inter.css" rel="stylesheet">
     <link href="./styles.css" rel="stylesheet">
+    <link href="./normalize.css" rel="stylesheet">
     <title>Resume</title>
 </head>
 <body>
-    <header>
-        <h1 class="header__title">Nataliya Sakhno</h1>
+    <div class="wrapper">
+    <header class="header">
+        <h1 class="header__title">NATALIYA SAKHNO</h1>
         <h3 class="header__subtitle">Trainee/Junior JavaScript developer</h3>
     </header>
-    <aside>
+    <div class="spase">
+        <div class="spase__line"></div>
+    </div>
+    <div class="main-content">
+    <aside class="sidebar">
         <div>
-            <h3>Contacts</h3>
-            <ul>
+            <h3 class="sidebar__title">Contacts</h3>
+            <ul class="sidebar-list">
                 <li>Email:
-                <a href="mailto:enatav1@gmail.com" class="contact-type">enatav1@gmail.com</a></li>
-                <li>LinkedIn <a href="">profile</a></li>
+                <a href="mailto:enatav1@gmail.com" class="sidebar__link">enatav1@gmail.com</a></li>
+                <li>LinkedIn <a href="https://www.linkedin.com/in/nataly-sakhno-737aba24b/" class="sidebar__link">profile</a></li>
                 <li>Telegram: @Enatav</li>
                 <li>GitHub:
-                <a href="https://github.com/Bittersweet-girl" class="contact-type">Bittersweet-girl</a></li>
+                <a href="https://github.com/Bittersweet-girl" class="sidebar__link">Bittersweet-girl</a></li>
                 <li>Discord name: Nataly Bittersweet-girl#1164</li>
             </ul>
         </div>
         <div>
-            <h3>Stack of Tecnologics</h3>
-            <ul>
+            <h3 class="sidebar__title">Stack of Tecnologics</h3>
+            <ul class="sidebar-list">
                 <li>HTML/CSS</li>
                 <li>SASS</li>
                 <li>JavaScript</li>
@@ -41,8 +48,8 @@
             </ul>
         </div>
         <div>
-            <h3>Soft Skills</h3>
-            <ul>
+            <h3 class="sidebar__title">Soft Skills</h3>
+            <ul class="sidebar-list">
                 <li>Teamwork</li>
                 <li>Negotiation skills</li>
                 <li>Time management</li>
@@ -54,8 +61,8 @@
             </ul>
         </div>
         <div>
-            <h3>Languages</h3>
-            <ul>
+            <h3 class="sidebar__title">Languages</h3>
+            <ul class="sidebar-list">
                 <li>Ukrainian - native speaker</li>
                 <li>Russian - advance</li>
                 <li>English - intermedia</li>
@@ -63,12 +70,12 @@
         </div>
     </aside>
 
-    <main>
-        <section class="work" id="work">
-            <h2 class="title">Experience</h2>
+    <main class="main">
+        <section class="work">
+            <h2 class="work__title">Experience</h2>
             <div>
-                <h4 class="work-position">HTML/CSS developer (freelance), <span class="organisation">LineCore</span></h4>
-                <p class="period">November 2013 - February 2014<span class="line">|</span> Kyiv (remote)</p>
+                <h4 class="work__position">HTML/CSS developer (freelance) in LineCore</h4>
+                <p class="work__period">November 2013 - February 2014. Kyiv (remote)</p>
                 <ul class="work-list">
                     <li>
                         Slice (PSD) to HTML
@@ -79,17 +86,17 @@
                 </ul>
             </div>
         </section>
-        <section>
-            <h2>Education</h2>
+        <section class="education">
+            <h2 class="education__title">Education</h2>
             <ul class="education-list">
                 <li>
-                    <h4 class="education-name">National aviation university</h4>
-                    <h4 class="education-position">Master “Computer systems and networks”</h4>
-                    <p class="period">September 2007 - February 2013 <span class="line">|</span> Kyiv</p>
+                    <h4 class="education__name">National aviation university</h4>
+                    <h4 class="education__position">Master “Computer systems and networks”</h4>
+                    <p class="education__period">September 2007 - February 2013. Kyiv</p>
                 </li>
                 <li>
-                    <h4 class="education-name">Courses</h4>
-                    <ul>
+                    <h4 class="education__name">Courses</h4>
+                    <ul class="education-list">
                         <li>JS/Frontend on RS School - 
                             <a href="https://app.rs.school/certificate/hd9y9yhd">Certificate</a>
                         </li>
@@ -98,12 +105,14 @@
                 </li>
             </ul>
         </section>
-        <section class="project" id="project">
-            <h2 class="title">Projects</h2>
-            <a class="project-img" href="https://bittersweet-girl-cv-cross-check.netlify.app">
-                <img src="assets/img/cv-html_css.png" alt="My first project">
+        <section class="project">
+            <h2 class="project__title">Projects</h2>
+            <a class="project__link" href="https://rslang-bittersweet-girl.herokuapp.com">
+                <img src="assets/img/lang.jpg" alt="RSlang" class="project__img">
             </a>
         </section>
     </main>
+    </div>
+    </div>
 </body>
 </html>
