--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <h1 class="header__title">NATALIYA SAKHNO</h1>
         <h3 class="header__subtitle">Trainee/Junior JavaScript developer</h3>
     </header>
-    <div class="spase">
-        <div class="spase__line"></div>
-    </div>
+    <section class="aboute">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nam. Exercitationem iusto blanditiis in aliquam praesentium. Placeat, hic! Consequuntur beatae aut corrupti? Unde pariatur corrupti commodi, ipsum atque autem accusantium!</p>
+    </section>
     <div class="main-content">
     <aside class="sidebar">
         <div>
-            <h3 class="sidebar__title">Contacts</h3>
+            <h3 class="sidebar__title">CONTACTS</h3>
             <ul class="sidebar-list">
                 <li>Email:
                 <a href="mailto:enatav1@gmail.com" class="sidebar__link">enatav1@gmail.com</a></li>
@@ -33,7 +33,7 @@
             </ul>
         </div>
         <div>
-            <h3 class="sidebar__title">Stack of Tecnologics</h3>
+            <h3 class="sidebar__title">STACK OF TECNOLOGYS</h3>
             <ul class="sidebar-list">
                 <li>HTML/CSS</li>
                 <li>SASS</li>
@@ -48,7 +48,7 @@
             </ul>
         </div>
         <div>
-            <h3 class="sidebar__title">Soft Skills</h3>
+            <h3 class="sidebar__title">SOFT SKILS</h3>
             <ul class="sidebar-list">
                 <li>Teamwork</li>
                 <li>Negotiation skills</li>
@@ -61,7 +61,7 @@
             </ul>
         </div>
         <div>
-            <h3 class="sidebar__title">Languages</h3>
+            <h3 class="sidebar__title">LANGUAGES</h3>
             <ul class="sidebar-list">
                 <li>Ukrainian - native speaker</li>
                 <li>Russian - advance</li>
@@ -72,7 +72,7 @@
 
     <main class="main">
         <section class="work">
-            <h2 class="work__title">Experience</h2>
+            <h2 class="work__title main__title">EXPERIENCE</h2>
             <div>
                 <h4 class="work__position">HTML/CSS developer (freelance) in LineCore</h4>
                 <p class="work__period">November 2013 - February 2014. Kyiv (remote)</p>
@@ -87,14 +87,11 @@
             </div>
         </section>
         <section class="education">
-            <h2 class="education__title">Education</h2>
-            <ul class="education-list">
-                <li>
+            <h2 class="education__title main__title">EDUCATION</h2>
+            <div>
                     <h4 class="education__name">National aviation university</h4>
                     <h4 class="education__position">Master “Computer systems and networks”</h4>
                     <p class="education__period">September 2007 - February 2013. Kyiv</p>
-                </li>
-                <li>
                     <h4 class="education__name">Courses</h4>
                     <ul class="education-list">
                         <li>JS/Frontend on RS School - 
@@ -102,14 +99,17 @@
                         </li>
                         <li>React on RS School - in progress</li>
                     </ul>
-                </li>
-            </ul>
+            </div>
         </section>
         <section class="project">
-            <h2 class="project__title">Projects</h2>
-            <a class="project__link" href="https://rslang-bittersweet-girl.herokuapp.com">
-                <img src="assets/img/lang.jpg" alt="RSlang" class="project__img">
-            </a>
+            <h2 class="project__title main__title">PROJECTS</h2>
+            <ul class="project-list">
+                <li>
+                    <a class="project__link" href="https://rslang-bittersweet-girl.herokuapp.com">
+                        <img src="assets/img/lang.jpg" alt="RSlang" class="project__img">
+                    </a>  
+                </li>
+            </ul>
         </section>
     </main>
     </div>
