--- a/index.html
+++ b/index.html
@@ -23,17 +23,19 @@
         <div>
             <h3 class="sidebar__title">CONTACTS</h3>
             <ul class="sidebar-list">
-                <li>Email:
-                <a href="mailto:enatav1@gmail.com" class="sidebar__link">enatav1@gmail.com</a></li>
-                <li>LinkedIn <a href="https://www.linkedin.com/in/nataly-sakhno-737aba24b/" class="sidebar__link">profile</a></li>
-                <li>Telegram: @Enatav</li>
-                <li>GitHub:
-                <a href="https://github.com/Bittersweet-girl" class="sidebar__link">Bittersweet-girl</a></li>
-                <li>Discord name: Nataly Bittersweet-girl#1164</li>
+                <li class="sidebar-list__item sidebar-list__item_mail">Email:
+                    <a href="mailto:enatav1@gmail.com" class="sidebar__link">enatav1@gmail.com</a></li>
+                <li class="sidebar-list__item sidebar-list__item_linkedin">LinkedIn 
+                    <a href="https://www.linkedin.com/in/nataly-sakhno-737aba24b/" class="sidebar__link">profile</a>
+                </li>
+                <li class="sidebar-list__item sidebar-list__item_telegram">Telegram: @Enatav</li>
+                <li class="sidebar-list__item sidebar-list__item_git">GitHub:
+                    <a href="https://github.com/Bittersweet-girl" class="sidebar__link">Bittersweet-girl</a></li>
+                <li class="sidebar-list__item sidebar-list__item_discord">Discord name: <br> Nataly Bittersweet-girl#1164</li>
             </ul>
         </div>
         <div>
-            <h3 class="sidebar__title">STACK OF TECNOLOGYS</h3>
+            <h3 class="sidebar__title">STACK OF TECNOLOGIES</h3>
             <ul class="sidebar-list">
                 <li>HTML/CSS</li>
                 <li>SASS</li>
@@ -92,7 +94,7 @@
                     <h4 class="education__name">National aviation university</h4>
                     <h4 class="education__position">Master “Computer systems and networks”</h4>
                     <p class="education__period">September 2007 - February 2013. Kyiv</p>
-                    <h4 class="education__name">Courses</h4>
+                    <h4 class="education__name">Courses (on-line)</h4>
                     <ul class="education-list">
                         <li>JS/Frontend on RS School - 
                             <a href="https://app.rs.school/certificate/hd9y9yhd">Certificate</a>
@@ -103,13 +105,38 @@
         </section>
         <section class="project">
             <h2 class="project__title main__title">PROJECTS</h2>
-            <ul class="project-list">
-                <li>
+            <div class="project-list">
+                <div class="project-list__item">
                     <a class="project__link" href="https://rslang-bittersweet-girl.herokuapp.com">
                         <img src="assets/img/lang.jpg" alt="RSlang" class="project__img">
                     </a>  
-                </li>
-            </ul>
+                </div>
+                <div class="project-list__item">
+                    <a class="project__link" href="https://bittersweet-girl.github.io/RSS-JS-stage1-2/shelter/pages/pets.html">
+                        <img src="assets/img/shelter.jpg" alt="shelter" class="project__img">
+                    </a>  
+                </div>
+                <div class="project-list__item">
+                    <a class="project__link" href="https://bittersweet-girl.github.io/RSS-JS-stage1-2/online-shop/">
+                        <img src="assets/img/shop.jpg" alt="shop" class="project__img">
+                    </a>  
+                </div>
+                <div class="project-list__item">
+                    <a class="project__link" href="https://bittersweet-girl.github.io/RSschoolJSstage0/portfolio/">
+                        <img src="assets/img/portfolio.jpg" alt="portfolio" class="project__img">
+                    </a>  
+                </div>
+                <div class="project-list__item">
+                    <a class="project__link" href="https://bittersweet-girl.github.io/RSschoolJSstage0/js30.3.1-tic-tac-toe/">
+                        <img src="assets/img/tic-tac.jpg" alt="tic-tac" class="project__img">
+                    </a>  
+                </div>
+                <div class="project-list__item">
+                    <a class="project__link" href="https://bittersweet-girl.github.io/RSS-keyboard/">
+                        <img src="assets/img/keybord.jpg" alt="keybord" class="project__img">
+                    </a>  
+                </div>
+            </div>
         </section>
     </main>
     </div>
