feat: add summary and hobbies, and fix some paddings

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
     <div class="wrapper">
     <header class="header">
         <h1 class="header__title">NATALIYA SAKHNO</h1>
-        <h3 class="header__subtitle">Trainee/Junior JavaScript developer</h3>
+        <h3 class="header__subtitle">Junior JavaScript developer</h3>
     </header>
-    <section class="aboute">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nam. Exercitationem iusto blanditiis in aliquam praesentium. Placeat, hic! Consequuntur beatae aut corrupti? Unde pariatur corrupti commodi, ipsum atque autem accusantium!</p>
+    <section class="about">
+        <p>
+            I have experience in searching, structuring and sorting information.
+            The possibility of online education allowed me to return to my desire to work in the IT field.
+            My love of perfectionism helps to keep files and code organized.
+            I am looking for a job as a junior JavaScript developer in Kyiv or remotely.
+            I learn quickly, I have a firm goal to reach the Middle level in a year and a half.
+        </p>
     </section>
     <div class="main-content">
     <aside class="sidebar">
@@ -35,7 +41,7 @@
             </ul>
         </div>
         <div>
-            <h3 class="sidebar__title">STACK OF TECNOLOGIES</h3>
+            <h3 class="sidebar__title">STACK OF TECHNOLOGIES</h3>
             <ul class="sidebar-list">
                 <li>HTML/CSS</li>
                 <li>SASS</li>
@@ -50,7 +56,7 @@
             </ul>
         </div>
         <div>
-            <h3 class="sidebar__title">SOFT SKILS</h3>
+            <h3 class="sidebar__title">SOFT SKILLS</h3>
             <ul class="sidebar-list">
                 <li>Teamwork</li>
                 <li>Negotiation skills</li>
@@ -67,7 +73,15 @@
             <ul class="sidebar-list">
                 <li>Ukrainian - native speaker</li>
                 <li>Russian - advance</li>
-                <li>English - intermedia</li>
+                <li>English - intermediate</li>
+            </ul>
+        </div>
+        <div>
+            <h3 class="sidebar__title">HOBBIES</h3>
+            <ul class="sidebar-list">
+                <li>Photography</li>
+                <li>Creating photo albums</li>
+                <li>Needlework</li>
             </ul>
         </div>
     </aside>
@@ -76,15 +90,19 @@
         <section class="work">
             <h2 class="work__title main__title">EXPERIENCE</h2>
             <div>
-                <h4 class="work__position">HTML/CSS developer (freelance) in LineCore</h4>
+                <h4 class="work__position">HTML/CSS developer (freelance) at LineCore</h4>
                 <p class="work__period">November 2013 - February 2014. Kyiv (remote)</p>
                 <ul class="work-list">
-                    <li>
-                        Slice (PSD) to HTML
-                    </li>
-                    <li>
-                        Fix bugs
-                    </li>
+                    <li>Slice (PSD) to HTML</li>
+                    <li>Fix bugs</li>
+                </ul>
+            </div>
+            <div>
+                <h4 class="work__position">Assistant at the Baryshivka region organization of the political party "For Ukraine"</h4>
+                <p class="work__period">2014 - 2017. Kyiv region</p>
+                <ul class="work-list">
+                    <li>Information search</li>
+                    <li>Documentation management</li>
                 </ul>
             </div>
         </section>
@@ -133,7 +151,7 @@
                 </div>
                 <div class="project-list__item">
                     <a class="project__link" href="https://bittersweet-girl.github.io/RSS-keyboard/">
-                        <img src="assets/img/keybord.jpg" alt="keybord" class="project__img">
+                        <img src="assets/img/keybord.jpg" alt="keyboard" class="project__img">
                     </a>  
                 </div>
             </div>
