refactor: update summary

--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
     </header>
     <section class="about">
         <p>
-            I have experience in searching, structuring and sorting information.
-            The possibility of online education allowed me to return to my desire to work in the IT field.
-            My love of perfectionism helps to keep files and code organized.
-            I am looking for a job as a junior JavaScript developer in Kyiv or remotely.
-            I learn quickly, I have a firm goal to reach the Middle level in a year and a half.
+            Hi, HRs!
+            I'm Natalia. I am the best Junior FE you'd have to see last few yers.
         </p>
     </section>
     <div class="main-content">
@@ -31,7 +28,7 @@
             <ul class="sidebar-list">
                 <li class="sidebar-list__item sidebar-list__item_mail">Email:
                     <a href="mailto:enatav1@gmail.com" class="sidebar__link">enatav1@gmail.com</a></li>
-                <li class="sidebar-list__item sidebar-list__item_linkedin">LinkedIn 
+                <li class="sidebar-list__item sidebar-list__item_linkedin">LinkedIn
                     <a href="https://www.linkedin.com/in/nataly-sakhno-737aba24b/" class="sidebar__link">profile</a>
                 </li>
                 <li class="sidebar-list__item sidebar-list__item_telegram">Telegram: @Enatav</li>
@@ -114,7 +111,7 @@
                     <p class="education__period">September 2007 - February 2013. Kyiv</p>
                     <h4 class="education__name">Courses (on-line)</h4>
                     <ul class="education-list">
-                        <li>JS/Frontend on RS School - 
+                        <li>JS/Frontend on RS School -
                             <a href="https://app.rs.school/certificate/hd9y9yhd">Certificate</a>
                         </li>
                         <li>React on RS School - in progress</li>
@@ -127,32 +124,32 @@
                 <div class="project-list__item">
                     <a class="project__link" href="https://rslang-bittersweet-girl.herokuapp.com">
                         <img src="assets/img/lang.jpg" alt="RSlang" class="project__img">
-                    </a>  
+                    </a>
                 </div>
                 <div class="project-list__item">
                     <a class="project__link" href="https://bittersweet-girl.github.io/RSS-JS-stage1-2/shelter/pages/pets.html">
                         <img src="assets/img/shelter.jpg" alt="shelter" class="project__img">
-                    </a>  
+                    </a>
                 </div>
                 <div class="project-list__item">
                     <a class="project__link" href="https://bittersweet-girl.github.io/RSS-JS-stage1-2/online-shop/">
                         <img src="assets/img/shop.jpg" alt="shop" class="project__img">
-                    </a>  
+                    </a>
                 </div>
                 <div class="project-list__item">
                     <a class="project__link" href="https://bittersweet-girl.github.io/RSschoolJSstage0/portfolio/">
                         <img src="assets/img/portfolio.jpg" alt="portfolio" class="project__img">
-                    </a>  
+                    </a>
                 </div>
                 <div class="project-list__item">
                     <a class="project__link" href="https://bittersweet-girl.github.io/RSschoolJSstage0/js30.3.1-tic-tac-toe/">
                         <img src="assets/img/tic-tac.jpg" alt="tic-tac" class="project__img">
-                    </a>  
+                    </a>
                 </div>
                 <div class="project-list__item">
                     <a class="project__link" href="https://bittersweet-girl.github.io/RSS-keyboard/">
                         <img src="assets/img/keybord.jpg" alt="keyboard" class="project__img">
-                    </a>  
+                    </a>
                 </div>
             </div>
         </section>
