--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                 <li class="sidebar-list__item sidebar-list__item_telegram">Telegram: @Enatav</li>
                 <li class="sidebar-list__item sidebar-list__item_git">GitHub:
                     <a href="https://github.com/Bittersweet-girl" class="sidebar__link">Bittersweet-girl</a></li>
-                <li class="sidebar-list__item sidebar-list__item_discord">Discord name: <br> Nataly Bittersweet-girl#1164</li>
             </ul>
         </div>
         <div>
@@ -47,12 +46,14 @@
                 <li>SASS</li>
                 <li>JavaScript</li>
                 <li>TypeScript</li>
+                <li>React</li>
                 <li>Webpack</li>
                 <li>Figma</li>
                 <li>Photoshop</li>
                 <li>VS code</li>
                 <li>Npm/nvm</li>
                 <li>Eslint (airbnb config)</li>
+                <li>Jest/React Testing Library</li>
             </ul>
         </div>
         <div>
@@ -79,9 +80,9 @@
         <div>
             <h3 class="sidebar__title">HOBBIES</h3>
             <ul class="sidebar-list">
-                <li>Photography</li>
-                <li>Creating photo albums</li>
-                <li>Needlework</li>
+                <li class="sidebar-list__item sidebar-list__item_photo">Photography</li>
+                <li class="sidebar-list__item sidebar-list__item_album">Creating photo albums</li>
+                <li class="sidebar-list__item sidebar-list__item_needle">Needlework</li>
             </ul>
         </div>
     </aside>
@@ -114,10 +115,10 @@
                     <p class="education__period">September 2007 - February 2013. Kyiv</p>
                     <h4 class="education__name">Courses (on-line)</h4>
                     <ul class="education-list">
-                        <li>JS/Frontend on RS School - 
+                        <li>JS/Frontend at The Rolling Scopes School - 
                             <a href="https://app.rs.school/certificate/hd9y9yhd">Certificate</a>
                         </li>
-                        <li>React on RS School - in progress</li>
+                        <li>React at The Rolling Scopes School</li>
                     </ul>
             </div>
         </section>
